--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-yghhg
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/style.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="sumustekas">
+        <div class="bandele-top"></div>
+        <div class="suris"></div>
+        <div class="kecupas"></div>
+        <div class="suris"></div>
+        <div class="suris"></div>
+        <div class="suris"></div>
+        <div class="svogunas"></div>
+        <div class="mesa"></div>
+        <div class="mesa"></div>
+        <div class="mesa"></div>
+        <div class="agurkelis"></div>
+        <div class="mesos-paplotelis"></div>
+        <div class="mesos-paplotelis"></div>
+        <div class="bandele-bottom"></div>
+        <div class="lekste"></div>
+    </div>
+</body>
+</html>
